; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_arm.c_emit_storereg.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_arm.c_emit_storereg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@slave = common dso_local global i64 0, align 8
@slave_reg = common dso_local global i64 0, align 8
@master_reg = common dso_local global i64 0, align 8
@CCREG = common dso_local global i32 0, align 4
@slave_cc = common dso_local global i32 0, align 4
@master_cc = common dso_local global i32 0, align 4
@dynarec_local = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"str %s,fp+%d\0A\00", align 1
@regname = common dso_local global i32* null, align 8
@FP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @emit_storereg(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i64, i64* @slave, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i64, i64* @slave_reg, align 8
  %11 = trunc i64 %10 to i32
  br label %15

12:                                               ; preds = %2
  %13 = load i64, i64* @master_reg, align 8
  %14 = trunc i64 %13 to i32
  br label %15

15:                                               ; preds = %12, %9
  %16 = phi i32 [ %11, %9 ], [ %14, %12 ]
  %17 = load i32, i32* %3, align 4
  %18 = shl i32 %17, 2
  %19 = add nsw i32 %16, %18
  store i32 %19, i32* %5, align 4
  %20 = load i32, i32* %3, align 4
  %21 = load i32, i32* @CCREG, align 4
  %22 = icmp eq i32 %20, %21
  br i1 %22, label %23, label %30

23:                                               ; preds = %15
  %24 = load i64, i64* @slave, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %23
  br label %28

27:                                               ; preds = %23
  br label %28

28:                                               ; preds = %27, %26
  %29 = phi i32 [ ptrtoint (i32* @slave_cc to i32), %26 ], [ ptrtoint (i32* @master_cc to i32), %27 ]
  store i32 %29, i32* %5, align 4
  br label %30

30:                                               ; preds = %28, %15
  %31 = load i32, i32* %5, align 4
  %32 = sub nsw i32 %31, ptrtoint (i32* @dynarec_local to i32)
  store i32 %32, i32* %6, align 4
  %33 = load i32, i32* %6, align 4
  %34 = icmp slt i32 %33, 4096
  %35 = zext i1 %34 to i32
  %36 = call i32 @assert(i32 %35)
  %37 = load i32*, i32** @regname, align 8
  %38 = load i32, i32* %4, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i32, i32* %37, i64 %39
  %41 = load i32, i32* %40, align 4
  %42 = load i32, i32* %6, align 4
  %43 = call i32 @assem_debug(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %41, i32 %42)
  %44 = load i32, i32* %4, align 4
  %45 = load i32, i32* @FP, align 4
  %46 = call i32 @rd_rn_rm(i32 %44, i32 %45, i32 0)
  %47 = or i32 -444596224, %46
  %48 = load i32, i32* %6, align 4
  %49 = or i32 %47, %48
  %50 = call i32 @output_w32(i32 %49)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @assem_debug(i8*, i32, i32) #1

declare dso_local i32 @output_w32(i32) #1

declare dso_local i32 @rd_rn_rm(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
